--- a/src/app/post-list/post-list.component.html
+++ b/src/app/post-list/post-list.component.html
@@ -1,7 +1,8 @@
-<h2>Liste des posts</h2>
 <ul class="list-group">
-  <app-post-list-item  *ngFor="let post of posts"
-                 [postTitle] ="post.title"
-                 [postContent]="post.content">
-  </app-post-list-item>
+    <app-post-list-item  *ngFor="let post of posts"
+                         [postTitle]= "post.postTitle"
+                         [postContent]="post.postContent"
+                         [loveIts]="post.loveIts"
+                         [createdAt]="post.createdAt">
+    </app-post-list-item>
 </ul>
